fix: fix the version in mobile size overflow

--- a/website/src/theme/DocSidebar/styles.module.css
+++ b/website/src/theme/DocSidebar/styles.module.css
@@ -21,7 +21,7 @@
     transition: opacity 50ms ease;
   }
 
-  .sidebarVersionSwitch {
+  /* .sidebarVersionSwitch {
     display: flex;
     align-items: center;
     padding: 4px 1rem;
@@ -29,7 +29,7 @@
     border-radius: 0.5rem;
     border: 1px solid #eee;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03);
-  }
+  } */
 
   .sidebarWithHideableNavbar {
     padding-top: 0;
@@ -118,6 +118,20 @@
   font-weight: var(--ifm-font-weight-bold);
   line-height: 0.9;
   width: 24px;
+}
+
+.sidebarVersionSwitch {
+  display: flex;
+  align-items: center;
+  padding: 4px 1rem;
+  margin: 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid #eee;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03);
+}
+
+.sidebarVersionSwitch a {
+  display: inline-block;
 }
 
 :global(.menu__list) :global(.menu__list) {
